fix(tabs): align active tab styles with spec
Fixes the styling for active tabs not being aligned with the spec. According to the spec, they're supposed to have the current color, however in our case they retain the default text color. These changes also align the ripple colors.

Fixes #2058.

--- a/src/material/tabs/_tabs-common.scss
+++ b/src/material/tabs/_tabs-common.scss
@@ -8,6 +8,7 @@ $mat-tab-animation-duration: 500ms !default;
 
 // Mixin styles for labels that are contained within the tab header.
 @mixin tab-label {
+  @include user-select(none);
   height: $mat-tab-bar-height;
   padding: 0 24px;
   cursor: pointer;
@@ -38,6 +39,10 @@ $mat-tab-animation-duration: 500ms !default;
     @include cdk-high-contrast {
       opacity: 0.5;
     }
+  }
+
+  &.mat-tab-label-active {
+    opacity: 1;
   }
 
   .mat-tab-label-content {
